--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
         <div class="container">
             <div class="main">
-                <div class="logo"><img src="../img/SS-Logos.png" alt="logo" width="175px"></div>
+                <div class="logo"><img src="img/SS-Logos.png" alt="logo" width="175px"></div>
                 <div class="menu">
                     <ul>
                         <li>home</li>
